crates/ui/src/snapshots/cctop_ui__snapshot__connect_link_80x24.snap
---
source: crates/ui/src/snapshot.rs
expression: screen
---
 1:Dashboard │ + Tab (t) ───────────────────────────────────────────── Settings
╭ Overview ────────────────────────────────────────────────────────────────────╮
│Live rate         $0.04                               ⡀  Models               │
│Today             $8.97                               ⡀  Sessions  4 · 2 live │
│This month        $0.00                               ⡀  Agent CPU   3.2%     │
│All time         $28.51 $0.00/day this month             Agent mem 592 MB     │
╰────╭ Connect your Cloudflare account ───────────────────────────────────╮────╯
╭ Ses│ One address of your own for t and W, so a bookmark                 │────╮
│   L│ or a phone shortcut keeps working.                                 │    │
│●   │                                                                    │ ch…┃
│●   │ Paste a token                                                      │    │
╰────│ 1. Make an API token; the link fills it in:                        │────╯
╭ Inf│    dash.cloudflare.com/profile/api-tokens                          │text╮
│Root│    Tunnel · Edit, DNS · Edit, Zone · Read                          │    │
│    │ 2. Paste it here. A tunnel token works too.                        │    │
│   4│ > •••••••••••••••••█  17 characters                                │    │
│   4│                                                                    │    │
│   4│ [Enter] connect  [Ctrl+O] copy link  [Ctrl+Q] QR  [Esc] cancel     │    │
│    ╰────────────────────────────────────────────────────────────────────╯    │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ Limits ─────────────────────────────────────────────────────────── + account ╮
│Claude checking…                        Codex checking…                       │
╰──────────────────────────────────────────────────────────────────────────────╯
↑↓ Move ↵ Actions / Filter Space Mark a Attach R Resume ? Help          ⧉ share
