crates/ui/src/snapshots/cctop_ui__snapshot__connect_login_120x40.snap
---
source: crates/ui/src/snapshot.rs
expression: screen
---
 1:Dashboard │ + Tab (t) ───────────────────────────────────────────────────────────────────────────────────── Settings
╭ Overview ────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│Live rate         $0.04                               ⡀  Models    █████████ claude-opus-4-1 68% claude-sonnet-4-5 32%│
│Today             $8.97                               ⡀  Sessions  4 · 2 live · 3 in 24h                              │
│This month        $0.00                               ⡀  Agent CPU   3.2%                    ⡀                        │
│All time         $28.51 $0.00/day this month             Agent mem 592 MB · 2.5M in / 72.3K out                       │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Sessions (4) ────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│   LAST▲    DUR         $    CTX%  CPU% MODEL          HARNESS    PERM   ! HOST       PROFILE   BRANCH       PROJECT  │
│●    now     1h    $18.42   ▓▓90%  12.5 opus-4-1       ─          ─        local                ─            Fix the …│
│●     7m     2h     $2.87   ▓░29%   0.4 sonnet-4-5     ─          ─        local                ─            api      │
│○     3h     1h     $0.19       ─     ─ haiku-4-5      ─          ─        local                ─            docs     │
│○     2d    12h     $7.03       ─     ─ gpt-5-codex    ─          ─        local                ─            infra    │
│                                                                                                                      │
│                        ╭ Connect your Cloudflare account ───────────────────────────────────╮                        │
│                        │ One address of your own for t and W, so a bookmark                 │                        │
│                        │ or a phone shortcut keeps working.                                 │                        │
│                        │                                                                    │                        │
│                        │  Log in with browser  │  Paste a token   Tab ⇄                     │                        │
│                        │                                                                    │                        │
│                        │ Log in to Cloudflare and pick the domain there:                    │                        │
│                        │ cctop creates the tunnel and its DNS records.                      │                        │
╰────────────────────────│ Nothing to make or paste. Over ssh, the address is                 │────────────────────────╯
╭ Info  Performance  Proc│ shown here, to open wherever your browser is.                      │────────────────────────╮
│Root /usr/bin/claude --m│                                                                    │                        │
│    PID    CPU%       ME│ [Enter] log in  [Tab] paste a token instead  [Esc] cancel          │                        │
│   4101    9.8%    360.0╰────────────────────────────────────────────────────────────────────╯                        │
│   4188    2.4%     44.0M  node mcp-server.js                                                                         │
│   4290    0.3%      8.0M  bash -c npm test                                                                           │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Limits ─────────────────────────────────────────────────────────────────────────────────────────────────── + account ╮
│Claude checking…                                            Codex checking…                                           │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
↑↓ Move ↵ Actions / Filter Space Mark a Attach R Resume ? Help t New tab Tab Panel S Sort q Quit                ⧉ share
