crates/ui/src/snapshots/cctop_ui__snapshot__connect_login_80x24.snap
---
source: crates/ui/src/snapshot.rs
expression: screen
---
 1:Dashboard │ + Tab (t) ───────────────────────────────────────────── Settings
╭ Overview ────────────────────────────────────────────────────────────────────╮
│Live rate         $0.04                               ⡀  Models               │
│Today             $8.97                               ⡀  Sessions  4 · 2 live │
│This month        $0.00                               ⡀  Agent CPU   3.2%     │
│All time         $28.51 $0.00/day this month             Agent mem 592 MB     │
╰────╭ Connect your Cloudflare account ───────────────────────────────────╮────╯
╭ Ses│ One address of your own for t and W, so a bookmark                 │────╮
│   L│ or a phone shortcut keeps working.                                 │    │
│●   │                                                                    │ ch…┃
│●   │  Log in with browser  │  Paste a token   Tab ⇄                     │    │
╰────│                                                                    │────╯
╭ Inf│ Log in to Cloudflare and pick the domain there:                    │text╮
│Root│ cctop creates the tunnel and its DNS records.                      │    │
│    │ Nothing to make or paste. Over ssh, the address is                 │    │
│   4│ shown here, to open wherever your browser is.                      │    │
│   4│                                                                    │    │
│   4│ [Enter] log in  [Tab] paste a token instead  [Esc] cancel          │    │
│    ╰────────────────────────────────────────────────────────────────────╯    │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ Limits ─────────────────────────────────────────────────────────── + account ╮
│Claude checking…                        Codex checking…                       │
╰──────────────────────────────────────────────────────────────────────────────╯
↑↓ Move ↵ Actions / Filter Space Mark a Attach R Resume ? Help          ⧉ share
