crates/ui/src/snapshots/cctop_ui__snapshot__connect_login_waiting_80x24.snap
---
source: crates/ui/src/snapshot.rs
expression: screen
---
 1:Dashboard │ + Tab (t) ───────────────────────────────────────────── Settings
╭ Overview ────────────────────────────────────────────────────────────────────╮
│Live rate         $0.04                               ⡀  Models               │
│Today             $8.97                               ⡀  Sessions  4 · 2 live │
│This month        $0.00                               ⡀  Agent CPU   3.2%     │
│All time         $28.51 $0.00/day this month             Agent mem 592 MB     │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ Sessions (4) ────────────────────────────────────────────────────────────────╮
│   L╭ Connect your Cloudflare account ───────────────────────────────────╮    │
│●   │ Open this address in a browser, log in to                          │ ch…┃
│●   │ Cloudflare and pick the domain for the tunnel:                     │    │
╰────│    dash.cloudflare.com/argotunnel                                  │────╯
╭ Inf│ cctop waits here for up to ten minutes.                            │text╮
│Root│                                                                    │    │
│    │ [Ctrl+O] copy link  [Ctrl+Q] QR  [Esc] cancel                      │    │
│   4╰────────────────────────────────────────────────────────────────────╯    │
│   4188    2.4%     44.0M  node mcp-server.js                                 │
│   4290    0.3%      8.0M  bash -c npm test                                   │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ Limits ─────────────────────────────────────────────────────────── + account ╮
│Claude checking…                        Codex checking…                       │
╰──────────────────────────────────────────────────────────────────────────────╯
↑↓ Move ↵ Actions / Filter Space Mark a Attach R Resume ? Help          ⧉ share
