crates/ui/src/snapshots/cctop_ui__snapshot__connect_zones_80x24.snap
---
source: crates/ui/src/snapshot.rs
expression: screen
---
 1:Dashboard │ + Tab (t) ───────────────────────────────────────────── Settings
╭ Overview ────────────────────────────────────────────────────────────────────╮
│Live rate         $0.04                               ⡀  Models               │
│Today             $8.97                               ⡀  Sessions  4 · 2 live │
│This month        $0.00                               ⡀  Agent CPU   3.2%     │
│All time         $28.51 $0.00/day this month             Agent mem 592 MB     │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ Sessions (4) ────────────────────────────────────────────────────────────────╮
│   L╭ Connect your Cloudflare account ───────────────────────────────────╮    │
│●   │ The token works. Which domain is the tunnel on?                    │ ch…┃
│●   │                                                                    │    │
╰────│   example.com                                                      │────╯
╭ Inf│ › example.org                                                      │text╮
│Root│                                                                    │    │
│    │ [↑↓] pick  [Enter] next  [Esc] cancel                              │    │
│   4╰────────────────────────────────────────────────────────────────────╯    │
│   4188    2.4%     44.0M  node mcp-server.js                                 │
│   4290    0.3%      8.0M  bash -c npm test                                   │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ Limits ─────────────────────────────────────────────────────────── + account ╮
│Claude checking…                        Codex checking…                       │
╰──────────────────────────────────────────────────────────────────────────────╯
↑↓ Move ↵ Actions / Filter Space Mark a Attach R Resume ? Help          ⧉ share
